k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-api-service
  namespace: task-api
  labels:
    app: task-api
spec:
  type: NodePort
  selector:
    app: task-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30080
